--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <header>
-        <h1>Headline</h1>
+        <h1></h1>
     </header>
+    <form>
+        <input name="first_name" placeholder="First Name"/>
+        <input type="submit"/>
+    </form>
 </body>
 </html>
