--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,16 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Psykick</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1></h1>
-    </header>
-    <form>
-        <input name="first_name" placeholder="First Name" />
-        <input name="id" type="hidden" value={} />
-        <input type="submit"/>
+    <form method="POST">
+        <input name="student_id" type="text" value="1010119519"/>
+        <input name="password" type="password" />
+        <input type="submit" />
     </form>
 </body>
 </html>
