--- a/psykick/app/src/main/res/layout/activity_preview_notification.xml
+++ b/psykick/app/src/main/res/layout/activity_preview_notification.xml
@@ -7,4 +7,23 @@
     android:orientation="vertical"
     tools:context="com.example.uwmlh.psykick.PreviewNotificationActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/email_body"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:lines="10"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/submit"
+        android:text="send email"
+        android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
