--- a/psykick/app/src/main/res/layout/activity_main.xml
+++ b/psykick/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20sp"/>
+    <Button
+        android:id="@+id/questionsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Questions"/>
 </LinearLayout>
