--- a/templates/data.html
+++ b/templates/data.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Scriptable > Bubble | Chart.js sample</title>
+	<title>PSYKICK</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" />
     <script src="{{ url_for('static', filename='js/Chart.js') }}"></script>
@@ -20,7 +20,7 @@
             <nav id="nav">
                 <a href="/">Home</a>
                 <a href="/data">Data</a>
-                <a href="/calender">Calender</a>
+                <a href="#">Calender</a>
                 <!-- <a href="/loginstudent">Student Login</a>
                 <a href="/loginprof">Professional Login</a> -->
                 <!-- <a href="/contact">Contact</a> -->
