change up about

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,11 +43,11 @@
 								<p><strong>Psykick</strong> is a simple application for motivating students that suffer various problems in mental health.</p>
 							</section>
 							<section class="3u 6u(medium) 12u$(small)">
-								<h3>How we get you motivated</h3>
+								<h3>We get you motivated</h3>
 								<p></p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(small)">
-								<h3>How we get you committed</h3>
+								<h3>We get you committed</h3>
 								<p></p>
 							</section>
 						</div>
